--- a/src/components/Marker/Marker.css
+++ b/src/components/Marker/Marker.css
@@ -7,16 +7,17 @@
   width: 200px;
   height: 200px;
   margin: 0px;
-}
-
-.info-window {
- font-size: 17px;
- color: black;
- font-weight: 400;
+  font-size: 17px;
+  color: black;
+  font-weight: 400;
 }
 
 .info-window img {
   width: 200px;
   margin: 10px 0px;
   border-radius: 10px;
+}
+
+small {
+  font-size: 10px;
 }
